# err-backend-discord

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  discord.plug  discordb.py  pyproject.toml  requirements.txt  test-requirements.txt  tox.ini
.github/workflows/: python-package.yml
docs/: conf.py  configuration.rst  developer_guide.rst  index.rst  installation.rst  user_guide.rst
src/err-backend-discord/: err-backend-discord.plug  err-backend-discord.py
src/err-backend-discord/discordlib/: person.py  room.py
tests/: conftest.py  test_backend.py  test_person.py  test_room.py
